# ogs5

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  README.md  jenkins.groovy  shippable.yml
.github/workflows/: main.yml
Base/: BuildInfo.cpp.in  BuildInfo.h  BuildInfo.h.in  CMakeLists.txt  Configure.h.in  CorrectScientificNotationMain.cpp  DateTools.cpp  DateTools.h  FileFinder.h  FileTools.cpp  FileTools.h  Histogram.h  MemWatch.cpp  MemWatch.h  SplitMPI_Communicator.cpp  SplitMPI_Communicator.h  StringTools.cpp  StringTools.h  TimeInterval.h  binarySearch.cpp  binarySearch.h  break.cpp  break.h  display.cpp  display.h  isnan.h  makros.cpp  makros.h  memory.cpp  memory.h  printList.h  quicksort.h  swap.h  timer.cpp  timer.h  uniqueListInsert.h  wait.h
FEM/: BHEAbstract.h  BHE_1U.cpp  BHE_1U.h  BHE_2U.cpp  BHE_2U.h  BHE_CXA.cpp  BHE_CXA.h  BHE_CXC.cpp  BHE_CXC.h  BHE_Net.cpp  BHE_Net.h  BHE_Net_ELE_Abstract.h  BHE_Net_ELE_Distributor.cpp  BHE_Net_ELE_Distributor.h  BHE_Net_ELE_HeatPump.cpp  BHE_Net_ELE_HeatPump.h  BHE_Net_ELE_Pipe.cpp  BHE_Net_ELE_Pipe.h  BHE_Net_ELE_Pipe_Inner_1U.cpp  BHE_Net_ELE_Pipe_Inner_1U.h  BoundaryCondition.cpp  BoundaryCondition.h  CAP_IO.cpp  CAP_IO.h  CMakeLists.txt  Constrained.h  DUMUX.cpp  DUMUX.h  DistributionInfo.cpp  DistributionInfo.h  Eclipse.cpp  Eclipse.h  FEMCondition.cpp  FEMCondition.h  FEMEnums.cpp  FEMEnums.h  GeoInfo.cpp  GeoInfo.h  InitialCondition.cpp  InitialCondition.h  (+110 more)
FEM/Material/Fluid/Density/: WaterDensityIAPWSIF97Region1.h
FEM/Material/Fluid/GibbsFreeEnergy/: DimensionLessGibbsFreeEnergyRegion1.cpp  DimensionLessGibbsFreeEnergyRegion1.h
FEM/Material/Fluid/Viscosity/: WaterViscosityIAPWS.cpp  WaterViscosityIAPWS.h
FEM/Material/PorousMedium/: DamageZonePermeability.cpp  DamageZonePermeability.h
FEM/Material/PorousMedium/Permeability/: PorosityDependentFractureRockPermeability.cpp  PorosityDependentFractureRockPermeability.h
FEM/Material/PorousMedium/Porosity/: TheoreticalPorosity.cpp  TheoreticalPorosity.h
FEM/Material/Solid/: BGRaCreep.cpp  BGRaCreep.h  MohrCoulombFailureCriterion.cpp  MohrCoulombFailureCriterion.h  StressAuxiliaryFunctions.cpp  StressAuxiliaryFunctions.h
FileIO/: CMakeLists.txt  OGSIOVer4.cpp  OGSIOVer4.h  OpenGeoSysGLI.xsl  Reader.cpp  Reader.h  StationIO.cpp  StationIO.h  Writer.cpp  Writer.h  readNonBlankLineFromInputStream.cpp  readNonBlankLineFromInputStream.h
FileIO/FEMIO/: BoundaryConditionIO.cpp  BoundaryConditionIO.h  GeoIO.cpp  GeoIO.h  ProcessIO.cpp  ProcessIO.h
FileIO/MathIO/: CRSIO.h
FileIO/MeshIO/: LegacyVtkInterface.cpp  LegacyVtkInterface.h  OGSMeshIO.cpp  OGSMeshIO.h
FileIO/XmlIO/: RapidXMLInterface.cpp  RapidXMLInterface.h
GCC/: CMakeLists.txt  Density.cpp  Density.h  DiffAL.h  DiffOH.cpp  DiffOH.h  HKF.cpp  HKF.h  IAPWS-IF97.cpp  IAPWS-IF97.h  IO.cpp  IO.h  NR.cpp  NR.h  PITZdata.cpp  PITZdata.h  VLE.cpp  VLE.h  WATEQdata.h  eqbrm.h  logk.cpp  logk.h  species.h
GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BruteForceClosestPair.cpp  BruteForceClosestPair.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  GEOObjects.cpp  GEOObjects.h  GeoObject.h  GeoType.cpp  GeoType.h  Grid.h  OctTree.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  PolylineVec.h  PolylineWithSegmentMarker.cpp  PolylineWithSegmentMarker.h  ProjectData.cpp  ProjectData.h  PropertyBounds.h  QuadTree.h  Raster.cpp  Raster.h  SensorData.cpp  SensorData.h  SimplePolygonTree.cpp  SimplePolygonTree.h  Station.cpp  Station.h  Surface.cpp  (+24 more)
MSH/: CMakeLists.txt  GridAdapter.cpp  GridAdapter.h  MSHEnums.cpp  MSHEnums.h  MeshNodesAlongPolyline.cpp  MeshNodesAlongPolyline.h  MshEditor.cpp  MshEditor.h  msh_core.cpp  msh_core.h  msh_edge.cpp  msh_edge.h  msh_elem.cpp  msh_elem.h  msh_faces.cpp  msh_faces.h  msh_lib.cpp  msh_lib.h  msh_lib_ext.cpp  msh_mesh.cpp  msh_mesh.h  msh_node.cpp  msh_node.h  msh_pnt.cpp
MSHGEOTOOLS/: CMakeLists.txt  ExtractMeshNodes.cpp  ExtractMeshNodes.h
MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  CMakeLists.txt  EarClippingTriangulation.cpp  EarClippingTriangulation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.cpp  MathTools.h  Matrix.h  Vector3.h  max.h
MathLib/InterpolationAlgorithms/: CubicSpline.cpp  CubicSpline.h  InverseDistanceInterpolation.h  LinearIntervalInterpolation.h  PiecewiseLinearInterpolation.cpp  PiecewiseLinearInterpolation.h
MathLib/LinAlg/: DenseDirectLinearSolver.h  DirectLinearSolver.h  GaussAlgorithm.cpp  GaussAlgorithm.h  IterativeLinearSolver.h  LinearSolver.h  TriangularSolve.cpp  TriangularSolve.h  VectorNorms.h
MathLib/PETSC/: PETScLinearSolver.cpp  PETScLinearSolver.h
OGS/: CMakeLists.txt  ogs_display.cpp  ogs_display.h  rf.cpp
UTL/: benchtimer.cpp  benchtimer.h  tokenbuf.cpp  tokenbuf.h
UTL/GIS2FEM/: CMakeLists.txt  main.cpp  misc.cpp  misc.h
UTL/MSHGEOTOOLS/: CMakeLists.txt  ModifyMeshProperties.cpp  ModifyMeshProperties.h  filterMeshNodes.cpp  mainConvertGLIVerticalSurfaceToPolygon.cpp  mainExtractMeshNodeIDs.cpp  mainExtractMeshNodes.cpp  mainModifyMeshProperties.cpp  testMeshSearchAlgorithms.cpp
UTL/mHM2OGS/: CMakeLists.txt  README.md  mHMPreprocessor.cpp  mHMPreprocessor.h  main.cpp  misc.cpp
scripts/: cmake.ogs.sh  compare.py  diff.py  gprof2dot.py  run_benchmarks.sh  run_tools.bat  setup_vs.bat  style_code.sh
scripts/base/: check_and_cleanup_build_directory.sh  configure_compiler.sh  (+1 more)
tests/: CMakeLists.txt  gcovr  logging.h  testBase.cpp  testBmSkel.cxx  testGeo.cpp  testOgs.cxx  testSolidProps.cpp  testrunner.cpp
tests/GEO/: CMakeLists.txt  TestPointInPolygon.cpp  TestPointInTriangle.cpp
tests/LinAlg/: testGaussAlgorithm.cpp
tests/Matrix/: testMatrix.cpp
tests/data/GEO/: CMakeLists.txt  TestDataPointInPolygon.gli
tests/data/bmskel/: CMakeLists.txt  a.bc  a.gli  a.ic  a.mfp  a.mmp  a.msh  a.msp  a.num  a.out  a.pcs  a.tim
tests/gdiff/: CMakeLists.txt  gdiff.cpp  gdiff.h
tests/gtest/: .clang-format  CMakeLists.txt
(+71 files in other folders)
